# tiptoe

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  coverage.json
.claude/: launch.json
.github/workflows/: ci.yml  discord-announce.yml  nightly.yml  release.yml
Source/: BypassButton.h  BypassButtonMetrics.h  KnobDesign.h  LayoutSizes.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumGraph.cpp  SpectrumGraph.h
Source/DSP/: BandGate.cpp  BandGate.h  Crossover.h  Decimator.h  Interpolator.h  MultiBandGate.cpp  MultiBandGate.h  ResamplerKernel.h  SpectralGateDenoiser.cpp  SpectralGateDenoiser.h  SpectralGateTiptoe.cpp  SpectralGateTiptoe.h
Tests/: TestBandGate.cpp  TestBypassButton.cpp  TestCrossover.cpp  TestLayoutSizes.cpp  TestMultiBandGate.cpp  TestResampler.cpp  TestSpectralGateDenoiser.cpp  TestSpectralGateTiptoe.cpp
Tools/: Screenshot.cpp
docs/: ARCHITECTURE.md
docs/coverage/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
docs/coverage/Source/: KnobDesign.h.func-c.html  KnobDesign.h.func.html  KnobDesign.h.gcov.html  PluginEditor.cpp.func-c.html  PluginEditor.cpp.func.html  PluginEditor.cpp.gcov.html  PluginEditor.h.func-c.html  PluginEditor.h.func.html  PluginEditor.h.gcov.html  PluginProcessor.cpp.func-c.html  PluginProcessor.cpp.func.html  PluginProcessor.cpp.gcov.html  PluginProcessor.h.func-c.html  PluginProcessor.h.func.html  PluginProcessor.h.gcov.html  SpectrumGraph.cpp.func-c.html  SpectrumGraph.cpp.func.html  SpectrumGraph.cpp.gcov.html  SpectrumGraph.h.func-c.html  SpectrumGraph.h.func.html  SpectrumGraph.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/coverage/Source/DSP/: SpectralGateDenoiser.cpp.func-c.html  SpectralGateDenoiser.cpp.func.html  SpectralGateDenoiser.cpp.gcov.html  SpectralGateTiptoe.cpp.func-c.html  SpectralGateTiptoe.cpp.func.html  SpectralGateTiptoe.cpp.gcov.html  SpectralGateTiptoe.h.func-c.html  SpectralGateTiptoe.h.func.html  SpectralGateTiptoe.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/coverage/Tests/: TestSpectralGateDenoiser.cpp.func-c.html  TestSpectralGateDenoiser.cpp.func.html  TestSpectralGateDenoiser.cpp.gcov.html  TestSpectralGateTiptoe.cpp.func-c.html  TestSpectralGateTiptoe.cpp.func.html  TestSpectralGateTiptoe.cpp.gcov.html  index.html
